hover nav effect

--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -14,6 +14,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Other CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css">
     <!-- Custom styles for this template -->
     <link href="css/page.css" rel="stylesheet">
 </head>
@@ -31,20 +32,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex " style="margin-right: 7%">
-                <li class="nav-item active">
-                    <a class="nav-link" href="https://www.alir.eu/">FORUM</a>
+                <li class="nav-item">
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/">FORUM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.alir.eu/alirschool/">GUIDA</a>
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/alirschool/">GUIDA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.alir.eu/rules/">REGOLE</a>
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/rules/">REGOLE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.alir.eu/forum/12-supporto-giocatori/">AIUTO</a>
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/forum/12-supporto-giocatori/">AIUTO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.alir.eu/donazioni/">DONAZIONI</a>
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/donazioni/">DONAZIONI</a>
                 </li>
             </ul>
         </div>
