import from web

--- a/pages/homepage/donations.html
+++ b/pages/homepage/donations.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <!-- Custom styles for this template -->
+    <!--<link href="https://alir.eu/etero/css/template.css" rel="stylesheet">-->
     <link href="css/page.css" rel="stylesheet">
 </head>
 <body>
@@ -162,7 +163,9 @@
         integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
 <script defer src="https://alir.eu/etero/js/fontawesome5.min.js"></script>
+<!--<script defer src="https://alir.eu/etero/js/home.js"></script>-->
 <script defer src="js/home.js"></script>
-<!--<script src="https://cdnjs.cat.net/ajax/libs/defiant.js/1.2.6/defiant.js"></script>-->
+<!--<script defer src="https://alir.eu/etero/js/status.js"></script>-->
+<script defer src="js/status.js"></script>
 </body>
 </html>
