--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css">
     <!-- Custom styles for this template -->
+    <!--<link href="https://alir.eu/etero/css/template.css" rel="stylesheet">-->
     <link href="css/page.css" rel="stylesheet">
 </head>
 <body>
@@ -361,7 +362,9 @@
 <script defer src="https://alir.eu/etero/js/fontawesome5.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/locale/it.js"></script>
+<!--<script defer src="https://alir.eu/etero/js/home.js"></script>-->
 <script defer src="js/home.js"></script>
+<!--<script defer src="https://alir.eu/etero/js/status.js"></script>-->
 <script defer src="js/status.js"></script>
 </body>
 </html>
