--- a/pages/homepage/gangskins.html
+++ b/pages/homepage/gangskins.html
@@ -22,38 +22,31 @@
 <body>
 <header id="top">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">PRODUCT LOGO</a>
+        <a class="navbar-brand" href="#" style="margin-left: 10%">
+            <img style="background-size: auto; width: 130px; height: 70PX; background-repeat: no-repeat;"
+                 src="https://www.alir.eu/uploads/monthly_2018_01/Logo.png.b29bb8e8779168ebf59eae26e492dadb.png"
+                 alt="ALIR">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <!--<ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex " style="margin-right: 7%">
+                <li class="nav-item">
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/">FORUM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/alirschool/">GUIDA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>-->
-            <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">LINK</a>
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/rules/">REGOLE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">LINK</a>
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/forum/12-supporto-giocatori/">AIUTO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">LINK</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">LINK</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">LINK</a>
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/donazioni/">DONAZIONI</a>
                 </li>
             </ul>
         </div>
