--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -18,6 +18,22 @@
     <!-- Custom styles for this template -->
     <!--<link href="https://alir.eu/etero/css/template.css" rel="stylesheet">-->
     <link href="css/page.css" rel="stylesheet">
+
+    <!-- Hotjar Tracking Code for www.alir.eu -->
+    <!--<script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () {
+                (h.hj.q = h.hj.q || []).push(arguments)
+            };
+            h._hjSettings = {hjid: 680245, hjsv: 6};
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>-->
+
 </head>
 <body>
 <header id="top">
