--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -186,15 +186,15 @@
                 <span> Slot <span class="hideonphone">- Ip: <span class="aliraddress">---.---.---.--</span>:<span
                         class="alirport">2302</span></span></span>
                 <a title="Altre informazioni" data-toggle="modal" data-target="#serverDataModal" class="infolink"><i
-                        style="" class="fas fa-info"></i></a>
+                      class="fas fa-info"></i></a>
                 <a title="Connettiti al server" href="steam://rungameid/107410// +connect 145.239.149.40:2302"
-                   rel="external nofollow" style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
+                   rel="external nofollow" style="padding-left: 5px;"><i class="fas fa-external-link-alt"></i></a>
             </div>
             <div class="col-md-5">
                 <strong class="d-inline-block">Teamspeak: <span style="color: #4CAF50">256</span></strong> Slot <span
                     class="hideonphone">- Ip: <span>TS.ALIR.EU</span></span>
                 <a title="Connettiti al ts" href="ts3server://ts.alir.eu" rel="external nofollow"
-                   style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
+                   style="padding-left: 5px;"><i class="fas fa-external-link-alt"></i></a>
             </div>
         </div>
     </div>
