--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css">
     <!-- Custom styles for this template -->
-    <!--<link href="https://alir.eu/etero/css/template.css" rel="stylesheet">-->
-    <link href="css/page.css" rel="stylesheet">
+    <link href="https://alir.eu/etero/css/template.min.css" rel="stylesheet">
+    <!--<link href="css/page.css" rel="stylesheet">-->
 
     <!-- Hotjar Tracking Code for www.alir.eu -->
     <!--<script>
@@ -366,7 +366,8 @@
 </div>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -377,9 +378,9 @@
 <script defer src="https://alir.eu/etero/js/fontawesome5.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/locale/it.js"></script>
-<!--<script defer src="https://alir.eu/etero/js/home.js"></script>-->
-<script defer src="js/home.js"></script>
-<!--<script defer src="https://alir.eu/etero/js/status.js"></script>-->
-<script defer src="js/status.js"></script>
+<script defer src="https://alir.eu/etero/js/home.min.js"></script>
+<!--<script defer src="js/home.js"></script>-->
+<script defer src="https://alir.eu/etero/js/status.min.js"></script>
+<!--<script defer src="js/status.js"></script>-->
 </body>
 </html>
