fix link to forums

--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex " style="margin-right: 7%">
                 <li class="nav-item">
-                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/">FORUM</a>
+                    <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/forums/">FORUM</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link hvr-underline-from-left" href="https://www.alir.eu/alirschool/">GUIDA</a>
@@ -88,7 +88,7 @@
                     <div class="carousel-caption text-left">
                         <h1>Benvenuto!</h1>
                         <p>Per visualizzare il nostro forum accedi o registrati!</p>
-                        <p><a class="btn btn-lg btn-primary" href="https://www.alir.eu/login" role="button">Accedi/Registrati</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="https://www.alir.eu/forums/" role="button">Accedi/Registrati</a></p>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
         <!-- Example row of columns -->
         <div class="row">
             <div class="col-md-3 pagec">
-                <a href="https://www.alir.eu/login" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
+                <a href="https://www.alir.eu/forums/" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
                         class="fas fa-comments"></i> Forum</a>
             </div>
             <div class="col-md-3 pagec">
@@ -270,7 +270,7 @@
             <div class="col-6 col-md">
                 <h5><i class="fas fa-link"></i> Link utili</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="https://www.alir.eu/">Forum</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forums/">Forum</a></li>
                     <li><a class="text-muted" href="https://www.alir.eu/rules/">Regolamento</a></li>
                     <li><a class="text-muted" href="https://www.alir.eu/alirschool/">Guida</a></li>
                     <li><a class="text-muted" href="https://www.alir.eu/forum/112-annunci/">Annunci dello staff</a></li>
