--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css">
     <!-- Custom styles for this template -->
-    <link href="https://alir.eu/etero/css/template.min.css" rel="stylesheet">
-    <!--<link href="css/page.css" rel="stylesheet">-->
+    <!--<link href="https://alir.eu/etero/css/template.min.css" rel="stylesheet">-->
+    <link href="css/page.css" rel="stylesheet">
 
     <!-- Hotjar Tracking Code for www.alir.eu -->
     <!--<script>
@@ -73,73 +73,77 @@
 
 <main role="main">
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators" style="cursor: pointer">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="first-slide slide" style="background-size: auto; background-repeat: no-repeat;"
-                     src="https://alir.eu/etero/sectionImages/homepage/medici.jpg"
-                     alt="First slide">
-                <div class="container">
-                    <div class="carousel-caption text-left">
-                        <h1>Benvenuto!</h1>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators" style="cursor: pointer">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="first-slide slide" style="background-size: auto; background-repeat: no-repeat;"
+                         src="https://alir.eu/etero/sectionImages/homepage/medici.jpg"
+                         alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Benvenuto!</h5>
                         <p>Per visualizzare il nostro forum accedi o registrati!</p>
-                        <p><a class="btn btn-lg btn-primary" href="https://www.alir.eu/forums/" role="button">Accedi/Registrati</a></p>
+                        <a class="btn btn-lg button-arma" href="https://www.alir.eu/forums/" role="button">Accedi/Registrati</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="second-slide slide" style="background-size: auto; background-repeat: no-repeat;"
+                         src="https://alir.eu/etero/sectionImages/homepage/city.jpg"
+                         alt="Second slide">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <h1>È la tua prima visita su Altis?</h1>
+                            <p>Leggi le nostre guide, ti aiuteranno ad orientarti!</p>
+                            <p><a class="btn btn-lg button-arma" href="https://www.alir.eu/alirschool/" role="button">Leggi..</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="third-slide slide" style="background-size: auto; background-repeat: no-repeat;"
+                         src="https://alir.eu/etero/sectionImages/homepage/cop.jpg"
+                         alt="Third slide">
+                    <div class="container">
+                        <div class="carousel-caption text-right">
+                            <h1>Leggi le regole!</h1>
+                            <p>Questo è uno dei server più vecchi, abbiamo regole rispettale!</p>
+                            <p><a class="btn btn-lg button-arma" href="https://www.alir.eu/rules/" role="button">Leggile
+                                subito!</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img class="second-slide slide" style="background-size: auto; background-repeat: no-repeat;"
-                     src="https://alir.eu/etero/sectionImages/homepage/city.jpg"
-                     alt="Second slide">
-                <div class="container">
-                    <div class="carousel-caption">
-                        <h1>È la tua prima visita su Altis?</h1>
-                        <p>Leggi le nostre guide, ti aiuteranno ad orientarti!</p>
-                        <p><a class="btn btn-lg btn-primary" href="https://www.alir.eu/alirschool/" role="button">Leggi..</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="third-slide slide" style="background-size: auto; background-repeat: no-repeat;"
-                     src="https://alir.eu/etero/sectionImages/homepage/cop.jpg"
-                     alt="Third slide">
-                <div class="container">
-                    <div class="carousel-caption text-right">
-                        <h1>Leggi le regole!</h1>
-                        <p>Questo è uno dei server più vecchi, abbiamo regole rispettale!</p>
-                        <p><a class="btn btn-lg btn-primary" href="https://www.alir.eu/rules/" role="button">Leggile subito!</a></p>
-                    </div>
-                </div>
-            </div>
+            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Precedente</span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Successiva</span>
+            </a>
         </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Precedente</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Successiva</span>
-        </a>
-    </div>
+
 
     <div class="container">
         <!-- Example row of columns -->
         <div class="row">
             <div class="col-md-3 pagec">
-                <a href="https://www.alir.eu/forums/" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
+                <a href="https://www.alir.eu/forums/" class="btn button-arma btn-lg btn-block" role="button"
+                   aria-pressed="true"><i
                         class="fas fa-comments"></i> Forum</a>
             </div>
             <div class="col-md-3 pagec">
-                <a href="https://www.alir.eu/rules/" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
+                <a href="https://www.alir.eu/rules/" class="btn button-arma btn-lg btn-block" role="button"
+                   aria-pressed="true"><i
                         class="fas fa-book "></i> Regolamento</a>
             </div>
             <div class="col-md-3 pagec">
-                <a href="https://www.alir.eu/alirschool/" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
+                <a href="https://www.alir.eu/alirschool/" class="btn button-arma btn-lg btn-block" role="button"
+                   aria-pressed="true"><i
                         class="fas fa-compass"></i> Guida</a>
             </div>
             <div class="col-md-3 pagec">
@@ -174,7 +178,7 @@
             </div>
         </div>
     </div>
-    <div class="container card">
+    <div class="container services-line">
         <!-- Example row of columns -->
         <div class="row" style="margin: 4px;">
             <div class="col-md-2">
@@ -186,7 +190,7 @@
                 <span> Slot <span class="hideonphone">- Ip: <span class="aliraddress">---.---.---.--</span>:<span
                         class="alirport">2302</span></span></span>
                 <a title="Altre informazioni" data-toggle="modal" data-target="#serverDataModal" class="infolink"><i
-                      class="fas fa-info"></i></a>
+                        class="fas fa-info"></i></a>
                 <a title="Connettiti al server" href="steam://rungameid/107410// +connect 145.239.149.40:2302"
                    rel="external nofollow" style="padding-left: 5px;"><i class="fas fa-external-link-alt"></i></a>
             </div>
@@ -200,10 +204,14 @@
     </div>
     <div class="container carousel">
         <hr>
-        <div id="loadedArea"  hidden="">
+        <div id="loadedArea" hidden="">
             <!-- Three columns of text below the carousel -->
             <div class="container">
-                <strong class="d-inline-block mb-2 text-primary">Annunci recenti:</strong>
+                <div class="row">
+                    <div class="col-md-12 card-black">
+                        <h2 class="worksans">Annunci recenti</h2>
+                    </div>
+                </div>
                 <!-- Example row of columns -->
                 <div class="row" id="appendHeadingTopic">
                     <!--<div class="col-md-4">
@@ -220,7 +228,7 @@
             <div class="container carousel">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-12 card-black">
                             <h2 class="worksans">post recenti</h2>
                         </div>
                     </div>
@@ -259,13 +267,15 @@
                 </div>
             </div>
         </div>
-        <a type="button" id="backtop" href="#top" class="btn  btn-outline-light btn-lg btn-block"><i
+        <a type="button" id="backtop" href="#top" class="btn button-arma btn-lg btn-block"><i
                 class="fas fa-arrow-up "></i> Torna in alto!</a>
         <hr>
+
+
     </div>
     <!-- /.container -->
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="container footer-black">
         <div class="row">
             <div class="col-6 col-md">
                 <h5><i class="fas fa-link"></i> Link utili</h5>
