background for social block

--- a/blocks/social-block/content.html
+++ b/blocks/social-block/content.html
@@ -59,22 +59,22 @@
     }
 
     .aliricon--facebook a {
-        background-color: #2D3035;
+        background-color: hsla(0,0%,100%,.08);
         background-image: url("https://alir.eu/etero/social/facebook.svg");
     }
-
     .aliricon--twitter a {
-        background-color: #2D3035;
+        background-color: hsla(0,0%,100%,.08);
         background-image: url("https://alir.eu/etero/social/twitter.svg");
     }
     .aliricon--telegram a {
-        background-color: #2D3035;
+        background-color: hsla(0,0%,100%,.08);
         background-image: url("https://www.alir.eu/etero/social/telegram.svg");
     }
     .aliricon--youtube a {
-        background-color: #2D3035;
+        background-color: hsla(0,0%,100%,.08);
         background-image: url("https://www.alir.eu/etero/social/youtube.svg");
     }
+
 </style>
 <div class="ipsPad ipsWidget_inner">
     <div id="socialDiv" style="min-height: 72px; width: 100%;">
