--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -320,9 +320,8 @@
                 <!--<img class="mb-2  rounded mx-auto d-block"
                      src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">-->
                 <small class="d-block mb-3 text-muted" style="text-align: center">© 2015-2018</small>
-                <small class="d-block mb-3 text-muted tip" style="text-align: center">Creata con <i class="fas fa-heart"
-                                                                                                    style="color: firebrick;"></i>
-                    da andreacw
+                <small class="d-block mb-3 text-muted tip" style="text-align: center">Creata con
+                    <i class="fas fa-heart" style="color: firebrick;"></i> da andreacw
                 </small>
             </div>
         </div>
