--- a/blocks/social-block/content.html
+++ b/blocks/social-block/content.html
@@ -27,7 +27,11 @@
         transition: all .2s ease-out;
     }
     .aliricon a:hover {
-        background-color: #474747;
+        background-color: rgba(0,0,0,.35);
+        box-shadow: 0 0 6px -1px #000;
+        font-size: 20px;
+        border-radius: 0 !important;
+        border: 1px solid #000;
         background-size: 0;
         -webkit-transition: all .2s ease-out;
         transition: all .2s ease-out;
@@ -59,19 +63,19 @@
     }
 
     .aliricon--facebook a {
-        background-color: hsla(0,0%,100%,.08);
+        background-color: hsla(0, 0%, 100%, 0);
         background-image: url("https://alir.eu/etero/social/facebook.svg");
     }
     .aliricon--twitter a {
-        background-color: hsla(0,0%,100%,.08);
+        background-color: hsla(0, 0%, 100%, 0);
         background-image: url("https://alir.eu/etero/social/twitter.svg");
     }
     .aliricon--telegram a {
-        background-color: hsla(0,0%,100%,.08);
+        background-color: hsla(0, 0%, 100%, 0);
         background-image: url("https://www.alir.eu/etero/social/telegram.svg");
     }
     .aliricon--youtube a {
-        background-color: hsla(0,0%,100%,.08);
+        background-color: hsla(0, 0%, 100%, 0);
         background-image: url("https://www.alir.eu/etero/social/youtube.svg");
     }
 
