#10 - Fix background and carousel

--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -56,12 +56,11 @@
 
 
 <main role="main">
-
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div id="alirCarousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators" style="cursor: pointer">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#alirCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#alirCarousel" data-slide-to="1"></li>
+                <li data-target="#alirCarousel" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -101,16 +100,15 @@
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#alirCarousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Precedente</span>
             </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#alirCarousel" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Successiva</span>
             </a>
         </div>
-
 
     <div class="container">
         <!-- Example row of columns -->
